--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Your Name</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Resume</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Muhammad Ali</h1>
-  <p>Personal website</p>
+    <header>
+        <h1>Muhammad Ali</h1>
+        <p></p>
+        <p>Email: <a href="mailto:muhammadali2005j@gmail.com">muhammadali2005j@gmail.com</a> | Phone: +92-33 60559007</p>
+    </header>
+
+    <section>
+        <h2>Education</h2>
+        <p><strong>Cornell University</strong> — Bachelor of Science in Computer Science</p>
+        <p><em>Expected Graduation: 2028</em></p>
+        <p> </p>
+    </section>
+
+    <section>
+        <h2>Experience</h2>
+        <div>
+            <h3>Peer Advisor — Cornell Engineering Career Center</h3>
+            <ul>
+                <li>Provided resume reviews, cover letter reviews, and practice interviews.</li>
+                <li>Assisted students with career exploration and professional development.</li>
+                <li>Presented career-related material to student organizations.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>Teaching Assistant</h3>
+            <ul>
+                <li>Assisted in course content delivery and student engagement.</li>
+                <li>Graded assignments and held office hours.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming: Python, Java, HTML/CSS, JavaScript</li>
+            <li>Tools: GitHub, AWS</li>
+            <li>Other: Problem-solving, Communication</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>Scentient</strong> — AI fragrance note classifier using cheminformatics and ML.</li>
+            <li><strong>VibeTune</strong> — Personalized music recommendation web app.</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 Muhammad Ali</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
