--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Muhammad Ali</h1>
         <p></p>
-        <p>Email: <a href="mailto:muhammadali2005j@gmail.com">muhammadali2005j@gmail.com</a> | Phone: +92-33 60559007</p>
+        <p><a href="mailto:muhammadali2005j@gmail.com">Email</a> | Phone: (640) 229 9197 | <a href="linkedin.com/in/muhammadali-cornell">Linekdin</a></p>
     </header>
 
     <section>
